# alpha-trader

./: .env.example  .env.template  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  at  config.yaml  pyproject.toml
.claude/skills/covered-call-policy/: SKILL.md
.claude/skills/help/: SKILL.md
.claude/skills/lang/: SKILL.md
.claude/skills/learner/: SKILL.md
.claude/skills/monitor/: SKILL.md
.claude/skills/news/: SKILL.md
.claude/skills/setup/: SKILL.md
scripts/: cron_review.sh  cron_scan.sh  generate_training_data.py  start-remote.sh
src/: alerts.py  analytics.py  backtest.py  bot.py  candidate_dataset.py  candidate_ranker.py  charts.py  cli.py  config.py  dashboard.py  db.py  iv_surface.py  margin.py  ml_signals.py  multileg.py  notify.py  optimizer.py  paper.py  policy.py  portfolio.py  report.py  roll.py  scan_engine.py  sparkline.py  strategy.py
src/data/: alphavantage.py  enhanced.py  events_calendar.py  fetcher.py  greeks.py  news.py
tests/: test_data_integrity.py
